ignore .Rproj.user/

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,21 @@
-
 .Rhistory
-
 .Rproj.user/BC4C44B8/pcs/workbench-pane.pper
-
 .Rproj.user/BC4C44B8/build_options
-
 *.pper
-
 .Rproj.user/BC4C44B8/saved_source_markers
-
 .Rproj.user/BC4C44B8/persistent-state
-
 .Rproj.user/BC4C44B8/sdb/prop/1ABE9676
-
 .Rproj.user/BC4C44B8/sdb/prop/418E1F0B
-
 .Rproj.user/BC4C44B8/sdb/prop/485537A5
-
 .Rproj.user/BC4C44B8/sdb/prop/5552C76F
-
 .Rproj.user/BC4C44B8/sdb/prop/INDEX
-
 .Rproj.user/BC4C44B8/sdb/prop/6370CCB1
-
 .Rproj.user/BC4C44B8/sdb/prop/8E4AFD81
-
 .Rproj.user/BC4C44B8/sdb/prop/98B83A4D
-
 .Rproj.user/BC4C44B8/sdb/prop/6A7FD8A2
-
 .Rproj.user/BC4C44B8/sdb/prop/BA8C89E9
-
 .Rproj.user/BC4C44B8/sdb/prop/DC7EB397
-
 .Rproj.user/BC4C44B8/sdb/prop/EE0FCD38
-
 .Rproj.user/BC4C44B8/sdb/prop/F420342E
-
 *.Rproj
+.Rproj.user
