ADD urls.chsi function for CDC county info

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(downloadandsave)
 export(lead.zeroes)
 export(put.first)
 export(url.countyhealthrankings)
+export(urls.chsi)
 export(urls.countyhealthrankings)
