--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: countyhealthrankings
 Title: Data on Health Indicators by US County, from countyhealthrankings.org
-Description: This package just provides 2014 and 2015 datasets from
+Description: This package provides 2014 - 2019 datasets from
     countyhealthrankings.org, imported to R as a data.frame,
     to facilitate use of the data in R.
     Source of data: http://www.countyhealthrankings.org/about-project
-    -- Obtained 3/27/2015 and
+    -- Obtained early data 3/27/2015 and
     slightly modified to provide 5 digit FIPS as character field,
     and ST field as copy of State field.
     For any imported/suggested packages not on CRAN, see http://ejanalysis.github.io
-Version: 0.1.1
+Version: 0.2.0
 License: CC-0
 Suggests:
     analyze.stuff,
@@ -17,7 +17,7 @@ URL: http://ejanalysis.github.io,
   https://github.com/ejanalysis/countyhealthrankings, 
   http://www.countyhealthrankings.org
 BugReports: https://github.com/ejanalysis/countyhealthrankings/issues
-Date: 2018-09-01
+Date: 2019-05-14
 Depends: R (>= 3.1.0)
 RoxygenNote: 6.1.1
 Repository: GitHub
