--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,12 @@ Title: Data on Health Indicators by US County, from countyhealthrankings.org
 Description: This package provides 2014 - 2019 datasets from
     countyhealthrankings.org, imported to R as a data.frame,
     to facilitate use of the data in R.
-    Source of data: http://www.countyhealthrankings.org/about-project
-    -- Obtained early data 3/27/2015 and
-    slightly modified to provide 5 digit FIPS as character field,
-    and ST field as copy of State field.
-    For any imported/suggested packages not on CRAN, see http://ejanalysis.github.io
-Version: 0.2.0
-License: CC-0
+    The source of the data is http://www.countyhealthrankings.org/about-project. 
+    The 2015 dataset was slightly modified to provide a 5-digit FIPS as a character field,
+    and ST field as a copy of State field.
+    For any imported/suggested packages not on CRAN, see http://ejanalysis.github.io.
+Version: 0.2.1
+License: MIT + file LICENSE
 Suggests:
     analyze.stuff,
     ejanalysis
@@ -17,7 +16,7 @@ URL: http://ejanalysis.github.io,
   https://github.com/ejanalysis/countyhealthrankings, 
   http://www.countyhealthrankings.org
 BugReports: https://github.com/ejanalysis/countyhealthrankings/issues
-Date: 2019-05-14
+Date: 2019-05-18
 Depends: R (>= 3.1.0)
 RoxygenNote: 6.1.1
 Repository: GitHub
